force-app/main/default/objects/FLODocs__FLO_Change_Approval_Policy__c/FLODocs__FLO_Change_Approval_Policy__c.object-meta.xml
<CustomObject>
    <description>These records track the persons who need to  approve changes and be alerted when unapproved changes occur.   The audit path identifies key people who need to be alerted in a given context by reason of process, customization type,  specific customization</description>
    <label>Change / Approval Policy</label>
    <nameField>
        <label>Change / Approval Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Changes / Approval Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>