force-app/main/default/objects/FLODocs__FLO_Change_Approval_Policy__c/fields/FLODocs__Approver__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Changes Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Changes_Approval_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>