force-app/main/default/objects/FLODocs__FLO_Change_Approval_Policy__c/fields/FLODocs__Data_Security_Control__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Data_Security_Control__c</fullName>
    <description>Changes to Data Security Changes, like TransactionSecurity and History Retention Policy</description>
    <inlineHelpText>Changes to Data Security Changes, like TransactionSecurity and History Retention Policy</inlineHelpText>
    <label>Data Security Changes</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Log Changes Only</fullName>
                <default>true</default>
                <label>Log Changes Only</label>
            </value>
            <value>
                <fullName>Process Issue Only</fullName>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
            <value>
                <fullName>Sandbox Development &amp; Testing</fullName>
            </value>
            <value>
                <fullName>Full Software Development Lifecycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>