force-app/main/default/objects/FLODocs__FLO_Change_Approval_Policy__c/fields/FLODocs__Labels_and_Translations_Control__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Labels_and_Translations_Control__c</fullName>
    <description>This is the level of control required for changes to Labels and Translations</description>
    <inlineHelpText>This is the level of control required for changes to Labels and Translations</inlineHelpText>
    <label>Label and Translation Changes</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Log Changes Only</fullName>
                <default>true</default>
                <label>Log Changes Only</label>
            </value>
            <value>
                <fullName>Process Issue Only</fullName>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
            <value>
                <fullName>Sandbox Development &amp; Testing</fullName>
            </value>
            <value>
                <fullName>Full Software Development Lifecycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>