force-app/main/default/objects/FLODocs__FLO_Change_Approval_Policy__c/fields/FLODocs__Max_of_Approvals_Required__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Max_of_Approvals_Required__c</fullName>
    <description>This field allows the approval to be considered complete if a given number of approvers have approved the change.  If blank, all approvers are required.</description>
    <inlineHelpText>This field allows the approval to be considered complete if a given number of approvers have approved the change.  If blank, all approvers are required.</inlineHelpText>
    <label>Max # of Approvals Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>