force-app/main/default/objects/FLODocs__FLO_Change_Approval_Policy__c/fields/FLODocs__Non_Material_Changes_For_Custom_Fields__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Non_Material_Changes_For_Custom_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set this checkbox to true to make Profile access changes via field level security automatically compliant. It happens when you create or edit the Field Security level from a Custom Field</inlineHelpText>
    <label>Indirect Changes to Profile</label>
    <type>Checkbox</type>
</CustomField>