force-app/main/default/objects/FLODocs__FLO_Change_Approval_Policy__c/fields/FLODocs__Require_Affected_Process_Approval__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Require_Affected_Process_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field governs whether affected process approval is required.</description>
    <inlineHelpText>Check this box to require approval by all affected processes in addition to designated process.</inlineHelpText>
    <label>Require Affected Process Approval</label>
    <type>Checkbox</type>
</CustomField>