force-app/main/default/objects/FLODocs__FLO_Change_Approval_Policy__c/fields/FLODocs__Search_and_Report_Changes__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Search_and_Report_Changes__c</fullName>
    <description>This is the level of change control required  for changes to any search or report not used in a script or workflow and not used as a control.</description>
    <inlineHelpText>This is the level of change control required  for changes to any search or report not used in a script or workflow and not used as a control.</inlineHelpText>
    <label>Report and List View Changes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FLODocs__FLO_Change_Control_Levels</valueSetName>
    </valueSet>
</CustomField>