force-app/main/default/objects/FLODocs__FLO_Change_Approval_Policy__c/fields/FLODocs__Territories_Control__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Territories_Control__c</fullName>
    <description>This is the level of control required for changes to objects affecting Territories</description>
    <inlineHelpText>This is the level of control required for changes to objects affecting Territories</inlineHelpText>
    <label>Territories Changes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Log Changes Only</fullName>
            </value>
            <value>
                <fullName>Process Issue Only</fullName>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
            <value>
                <fullName>Sandbox Development &amp; Testing</fullName>
            </value>
            <value>
                <fullName>Full Software Development Lifecycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>