force-app/main/default/objects/FLODocs__FLO_Change_Approval_Policy__c/fields/FLODocs__User_Role_Profile_Changes__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__User_Role_Profile_Changes__c</fullName>
    <description>Changes of the user profile - When the user has changed the profile FLODocs will create a Change Log</description>
    <inlineHelpText>Changes of the user profile - When the user has changed the profile FLODocs will create a Change Log</inlineHelpText>
    <label>User Role and Profile Changes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FLODocs__FLO_Change_Control_Levels</valueSetName>
    </valueSet>
</CustomField>