force-app/main/default/objects/FLODocs__FLO_Change_Approval_Policy__c/fields/FLODocs__Web_Related_Changes__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Web_Related_Changes__c</fullName>
    <description>This is the level of control required for changes to objects affecting web objects (eg CustomSite, Network (Communities), etc)</description>
    <inlineHelpText>This is the level of control required for changes to objects affecting web objects (eg CustomSite, Network (Communities), etc)</inlineHelpText>
    <label>Web-Related Changes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FLODocs__FLO_Change_Control_Levels</valueSetName>
    </valueSet>
</CustomField>