force-app/main/default/objects/FLODocs__FLO_Change_Approval_Policy__c/listViews/FLODocs__All_Policies_v3.listView-meta.xml
<ListView>
    <fullName>FLODocs__All_Policies_v3</fullName>
    <columns>NAME</columns>
    <columns>FLODocs__Default_Policy__c</columns>
    <columns>FLODocs__Executive_Approver__c</columns>
    <columns>FLODocs__Final_Approver__c</columns>
    <columns>FLODocs__Control_Changes__c</columns>
    <columns>FLODocs__Scripted_Object_Control__c</columns>
    <columns>FLODocs__General_Settings_Control__c</columns>
    <columns>FLODocs__Data_Quality_Control__c</columns>
    <columns>FLODocs__Data_Control__c</columns>
    <columns>FLODocs__Applications_Control__c</columns>
    <columns>FLODocs__Templates_Control__c</columns>
    <columns>FLODocs__Labels_and_Translations_Control__c</columns>
    <columns>FLODocs__Layout_and_Record_Types_Control__c</columns>
    <columns>FLODocs__Reports_Dashboards_ListViews_Control__c</columns>
    <columns>FLODocs__Flow_Process_Builder_Workflow_Control__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Policies (v3)</label>
    <language>en_US</language>
</ListView>